--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TakeCare">
-        <activity android:name=".activities.ReportDetail"></activity>
+        <activity android:name=".activities.CourseDetail"></activity>
+        <activity android:name=".activities.ReportDetail" />
         <activity android:name=".activities.AppointmentDetail" />
         <activity android:name=".activities.Profile" />
         <activity android:name=".activities.MainActivity">
