--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TakeCare">
-        <activity android:name=".activities.CourseDetail"></activity>
+        <activity android:name=".activities.MedicineDetail"></activity>
+        <activity android:name=".activities.CourseDetail" />
         <activity android:name=".activities.ReportDetail" />
         <activity android:name=".activities.AppointmentDetail" />
         <activity android:name=".activities.Profile" />
@@ -20,6 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".notifications.NotificationPublisher" />
     </application>
 
 </manifest>
